<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:text="@string/info_choose_product"/>

    <TextView
        android:id="@+id/tv_barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="true"
        tools:text="0545125481"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        android:text="@string/txt_suggestion"/>

    <FrameLayout
        android:id="@+id/suggestion_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp" >

        <ProgressBar
            android:id="@+id/load_suggestion_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal" />

        <!--<Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Coca cola 50 cl"
            android:background="@color/btn_logut_bg"/>-->
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:layout_marginTop="30dp"
        android:text="@string/info_enter_product_name"/>

    <EditText
        android:id="@+id/product_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:hint="@string/product_name"
        android:imeActionId="6"
        android:imeActionLabel="@string/product_name"
        android:imeOptions="actionUnspecified"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/bt_next_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/action_next_step_1"
        android:textColor="@color/white"
        android:background="@color/btn_logut_bg"/>

</LinearLayout>