<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:text="@string/info_tell_more"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        android:text="@string/product_price"/>

    <EditText
        android:id="@+id/product_price"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:hint="@string/product_price"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:text="@string/product_purchase_date"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_pick_purchase_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/btn_logut_bg"
            android:padding="10dp"
            android:textColor="@color/white"
            android:text="@string/action_pick_date" />

        <TextView
            android:id="@+id/tv_purchase_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:text="@string/product_commercial_warranty"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_pick_commercial_warranty_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/btn_logut_bg"
            android:padding="10dp"
            android:textColor="@color/white"
            android:text="@string/action_pick_date" />

        <TextView
            android:id="@+id/tv_commercial_warranty_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:text="@string/product_constructor_warranty"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_pick_constructor_warranty_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/btn_logut_bg"
            android:padding="10dp"
            android:textColor="@color/white"
            android:text="@string/action_pick_date" />

        <TextView
            android:id="@+id/tv_constructor_warranty_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <!--<View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        android:text="@string/store_name"/>

    <EditText
        android:id="@+id/store_city"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:hint="@string/store_city"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        android:text="@string/store_city"/>

    <EditText
        android:id="@+id/store_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:hint="@string/store_name"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/white" />-->

    <Button
        android:id="@+id/bt_next_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/action_next_step_2"
        android:textColor="@color/white"
        android:background="@color/btn_logut_bg"/>

</LinearLayout>